# NMRFit

./: pyproject.toml  setup.py
nmrfit/: common_functions.py
nmrfit/diffusion_tensor/: data_format.py  difftens.py  fit.py  geometric.py  nmr.py  params.py  test_fit.ipynb
nmrfit/model_free_analysis/: data_format.py  fit.py  modelfree.py  nmr.py  params.py  plot.py
nmrfit/sdm/: sdm.py
